welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: not found: value sum
	sum = a + b
        ^makes10:3: error: not found: value sum
	if( sum == 10 || a == 10 && b == Int ||b == 10 && a == Int){
            ^makes10:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if( sum == 10 || a == 10 && b == Int ||b == 10 && a == Int){
        ^